--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Index Page</title>
     <link href="Style.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
-    <img src="./images/logo.jpg"  border="2"/>
+    <img src="./images/logo.jpg"  alt="logo"/>
     <span>Welcome to Naresh I Technologies</span>
 </header>
 
-<br><br><br><br>
 <nav>
     <ul>
         <li><a href="#">Home</a></li>
@@ -19,29 +18,24 @@
         <li><a href="#">Contactus</a></li>
     </ul>
 </nav>
-<br>
-<br>
-<hr>
+<br> <br>
+
 <section>
     <div class="main">
         <div class="one">
     <article>
-        <p>
-            What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
+        <p>What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </article>
         </div>
         <div class="two">
-    <article>
-        <p>
-            What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-    </article>
+            <article>
+                <p>What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </article>
         </div>
     </div>
 </section>
 
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br>
 <footer>
     Naresh IT &copy; 2020 | Software Training - Online Training - Live Project Training - Weekend Training
 </footer>
